# integrate-footstep-project

./: .gitignore  README.md
docs/: note.md
processing/: Config.pde  Drawing.pde  Emotion.pde  Indoor.pde  OscHandlers.pde  Outdoor.pde  processing.pde
processing/data/: indoor_grid.json
python/: 2egait_lstm_model.h5  egait_lstm_model_0714_1.h5  egait_lstm_model_0714_2.h5  egait_lstm_model_0714_3.h5  egait_lstm_model_latest.h5  fix_model.py  main.py  pyproject.toml  tracker.py  tracker_config.py  tracker_emotion.py  tracker_runtime.py  train_model.py  walking_emotion_rf.pkl
python/tests/: test_indoor_emotion_log_analysis.py  test_indoor_training_contract.py  test_indoor_training_windows.py  test_integration_files.py  test_main.py  test_processing_contract.py  test_runtime_emotion_contract.py  test_tracker_calibration.py  test_tracker_emotion_defaults.py  test_tracker_emotion_logging.py  test_tracker_emotion_throttle.py  test_tracker_grid.py  test_tracker_projection.py
python/tools/: __init__.py  analyze_indoor_emotion_log.py
python/tracker/: calibration.py  config.py  emotion.py  grid.py  runtime.py
python/training/: train.py
python/walking_data/: happy_raw.csv  sad_raw.csv
to_integrate/drawing/: sketch_260706a.pde
to_integrate/indoor/: fix_model.py  integrated_system.py  sketch_integrated.pde
to_integrate/outdoor/: calc_angle.md  inference_osc_processing(歩幅+感情追加後).py  train_model.py  walking_emotion_rf.pkl
to_integrate/outdoor/iPhone_App/detect walking/detect walking.xcodeproj/: project.pbxproj
to_integrate/outdoor/walking_data/: neutral_raw.csv
(+4 files in other folders)
